--- a/demo_GAP/nextflow.config
+++ b/demo_GAP/nextflow.config
@@ -41,3 +41,26 @@ process {
     memory = '16 GB'
   }
 }
+
+process {  
+  withName: BCFTOOLS_ROH {  
+    cpus = 8  
+    memory = '32 GB'      // Adjust for genome size  
+    time = '24h'  
+  }  
+}  
+
+process {
+  withName: HET_DISTRIBUTION {
+    cpus = 4
+    memory = '8 GB'
+  }
+}
+
+process {
+  withName: RAISD {
+    cpus = 8
+    memory = '32 GB'       // Adjust accordingly for large genomes
+    time = '24h'
+  }
+}
