--- a/demo_GAP/nextflow.config
+++ b/demo_GAP/nextflow.config
@@ -12,7 +12,7 @@ process {
 process {  
   withName: LTRHARVEST {  
     cpus = 8  
-    memory = '64 GB'  // as LTRdigest is memory-heavy  
+    memory = '64 GB'  
     time = '48h'  
   }  
 }  
@@ -29,7 +29,7 @@ process {
 process {  
   withName: TRASH {  
     cpus = 8                 // Multi-threading for large genomes  
-    memory = '64 GB'         // Increase to 128 GB for vertebrate genomes  
+    memory = '64 GB'         // Optimally Increase to around 128 GB for vertebrate genomes  
     time = '72h'  
   }  
 }  
